--- a/index.html
+++ b/index.html
@@ -1094,8 +1094,8 @@
                                 <div class="url-content d-flex align-items-center">
                                     <div
                                             class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
-                                        <img class="lazy" src="ico/simou.jpg" data-src="ico/simou.jpg"
-                                             onerror="javascript:this.src='ico/simou.jpg'" alt="中华医学会">
+                                        <img class="lazy" src="ico/zhyxh.jpg" data-src="ico/zhyxh.jpg"
+                                             onerror="javascript:this.src='ico/zhyxh.jpg'" alt="中华医学会">
                                     </div>
                                     <div class="url-info flex-fill">
                                         <div class="text-sm overflowClip_1">
