--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
             <div class="d-flex flex-fill first-tag">
                 <h4 class="text-gray text-lg mb-4">
                     <i class="site-tag iconfont icon-tag icon-lg mr-1" id="term-1"></i>
-                    科研常用<span style="color:#f1404b"> · </span><i><a href="http://xsq135.ysepan.com/" target="_blank"
+                    科研常用<span style="color:#f1404b"> · </span><i><a href="http://MedicHome.github.io/" target="_blank"
                                                                     class="subtitle">医学常用</a> </i>
                 </h4>
                 <div class="flex-fill"></div>
