--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
             <div class="d-flex flex-fill first-tag">
                 <h4 class="text-gray text-lg mb-4">
                     <i class="site-tag iconfont icon-tag icon-lg mr-1" id="term-1"></i>
-                    科研常用<span style="color:#f1404b"> · </span><i><a href="http://MedicHome.github.io/" target="_blank"
+                    科研常用<span style="color:#f1404b"> · </span><i><a href="https://medichome.github.io/shuobo/" target="_blank"
                                                                     class="subtitle">医学常用</a> </i>
                 </h4>
                 <div class="flex-fill"></div>
@@ -1655,6 +1655,47 @@
                             </div>
                         </a>
                         <a href="https://yjs.dmu.edu.cn/zsgz/tzgg.htm" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+                    </div>
+                </div>
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <p style="color:red;">待添加，敬请期待！</p>
+                </div>
+            </div>
+
+
+            <div class="d-flex flex-fill ">
+                <h4 class="text-gray text-lg mb-4">
+                    <i class="site-tag iconfont icon-tag icon-lg mr-1" id="term-17"></i>
+                    北京市<span style="color:#f1404b"> · </span><i class="subtitle">华北地区</i>
+                </h4>
+                <div class="flex-fill"></div>
+            </div>
+
+            <div class="row">
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="https://yzbm.tsinghua.edu.cn/publish/s02/s0201/list?yxsdm=400" target="_blank" data-id="6"
+                           data-url="https://yzbm.tsinghua.edu.cn/publish/s02/s0201/list?yxsdm=400" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/TSdxyxy.jpg" data-src="ico/TSdxyxy.jpg"
+                                             onerror="javascript:this.src='ico/TSdxyxy.jpg'" alt="清华大学医学院">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>清华大学医学院</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://yzbm.tsinghua.edu.cn/publish/s02/s0201/list?yxsdm=400" class="togo text-center text-muted is-views" data-id="6"
                            data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
                                 class="iconfont icon-goto"></i></a>
                     </div>
