--- a/index.html
+++ b/index.html
@@ -1674,6 +1674,7 @@
             </div>
 
             <div class="row">
+
                 <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
                     <div class="url-body default">
                         <a href="https://yzbm.tsinghua.edu.cn/publish/s02/s0201/list?yxsdm=400" target="_blank" data-id="6"
@@ -1716,12 +1717,125 @@
 
 
             <div class="row">
+
                 <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
                     <div class="url-body default">
+                        <a href="http://gszs.hust.edu.cn/zsxx/ggtz.htm" target="_blank" data-id="6"
+                           data-url="http://gszs.hust.edu.cn/zsxx/ggtz.htm" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/hktjyxy.jpg" data-src="ico/hktjyxy.jpg"
+                                             onerror="javascript:this.src='ico/hktjyxy.jpg'" alt="华科同济医学院">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>华科同济医学院</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="http://gszs.hust.edu.cn/zsxx/ggtz.htm" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+
                     </div>
                 </div>
-            </div>
 
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="https://www.whuh.com/yxjy/yjsjy/zsxx.htm" target="_blank" data-id="6"
+                           data-url="https://www.whuh.com/yxjy/yjsjy/zsxx.htm" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/hkxhyy.jpg" data-src="ico/hkxhyy.jpg"
+                                             onerror="javascript:this.src='ico/hkxhyy.jpg'" alt="华科协和医院【推免】">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>华科协和【推免】</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.whuh.com/yxjy/yjsjy/zsxx.htm" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+
+                    </div>
+                </div>
+
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="https://www.tjh.com.cn/channels/296.html" target="_blank" data-id="6"
+                           data-url="https://www.tjh.com.cn/channels/296.html" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/hktjyxy.jpg" data-src="ico/hktjyxy.jpg"
+                                             onerror="javascript:this.src='ico/hktjyxy.jpg'" alt="华科同济医院【推免】">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>华科同济【推免】</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.tjh.com.cn/channels/296.html" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+
+                    </div>
+                </div>
+
+
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="http://www.liyuanhospital.com/index.php/index-show-tid-42.html" target="_blank" data-id="6"
+                           data-url="http://www.liyuanhospital.com/index.php/index-show-tid-42.html" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/hktjyxy.jpg" data-src="ico/hktjyxy.jpg"
+                                             onerror="javascript:this.src='ico/hktjyxy.jpg'" alt="华科梨园医院【all】">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>华科梨园【all】</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="http://www.liyuanhospital.com/index.php/index-show-tid-42.html" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+
+                    </div>
+                </div>
+
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <p style="color:red;">待添加，敬请期待！</p>
+                </div>
+
+            </div>
 
 
         <div>
