--- a/index.html
+++ b/index.html
@@ -1701,6 +1701,66 @@
                                 class="iconfont icon-goto"></i></a>
                     </div>
                 </div>
+
+
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="http://yjsy.bjmu.edu.cn/zslq/zsdt/" target="_blank" data-id="6"
+                           data-url="http://yjsy.bjmu.edu.cn/zslq/zsdt/" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/" data-src="ico/"
+                                             onerror="javascript:this.src='ico/'" alt="北京大学医学部">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>北京大学医学部</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="http://yjsy.bjmu.edu.cn/zslq/zsdt/" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+                    </div>
+                </div>
+
+
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="http://yjsy.bjmu.edu.cn/zslq/zsdt/221566.htm" target="_blank" data-id="6"
+                           data-url="http://yjsy.bjmu.edu.cn/zslq/zsdt/221566.htm" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="硕士、博士招生信息公告">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/" data-src="ico/"
+                                             onerror="javascript:this.src='ico/'" alt="北医附院">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>北医附院</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">硕士、博士招生信息公告</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="http://yjsy.bjmu.edu.cn/zslq/zsdt/221566.htm" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+                    </div>
+                </div>
+
+
+
+
                 <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
                     <p style="color:red;">待添加，敬请期待！</p>
                 </div>
@@ -1844,7 +1904,7 @@
             </h4>
             <div class="friendlink text-xs card">
                 <div class="card-body">
-<!--                    <a href="https://xsq13579.github.io/" title="有范的导航网站" target="_blank">医学者之家</a>-->
+<!--                    <a href="https://medichome.github.io/" title="有范的导航网站" target="_blank">医学者之家</a>-->
                     <a href="#">暂无更多...</a>
                     <!--                    <a href="https://www.52pojie.cn/" title="软件安全与病毒分析前沿，丰富的技术版块" target="_blank">吾爱破解</a>-->
                     <!--                    <a href="https://www.a.cool/" title="来吧，让世界再酷一点！" target="_blank">阿酷导航</a>-->
