--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                 <!--<a href="javascript:;">-->
                                 <a href="javascript:;" class="smooth change-href" data-change="#term-10">
                                     <i class="iconfont icon-zixun1 icon-fw icon-lg mr-2"></i>
-                                    <span class="tit">优质推荐</span>
+                                    <span class="tit">交流社区</span>
                                     <i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i>
                                 </a>
                                 <ul>
@@ -412,7 +412,7 @@
                                         <a href="#term-11" class="smooth"><span>视频号</span></a>
                                     </li>
                                     <li>
-                                        <a href="#term-11" class="smooth"><span>课程</span></a>
+                                        <a href="#term-11" class="smooth"><span>腾讯巢小兔</span></a>
                                     </li>
 
                                 </ul>
@@ -1116,34 +1116,6 @@
                 <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
 
                     <div class="url-body default">
-                        <a href="http://www.infocomm-journal.com/qkq/CN/jcim/home.shtml" target="_blank" data-id="6"
-                           data-url="http://www.infocomm-journal.com/qkq/CN/jcim/home.shtml"
-                           class="card no-c  mb-4 site-689" data-toggle="tooltip" data-placement="bottom"
-                           title="学术期刊">
-                            <div class="card-body">
-                                <div class="url-content d-flex align-items-center">
-                                    <div
-                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
-                                        <img class="lazy" src="ico/qk.jpg" data-src="ico/qk.jpg"
-                                             onerror="javascript:this.src='ico/qk.jpg'" alt="信通期刊">
-                                    </div>
-                                    <div class="url-info flex-fill">
-                                        <div class="text-sm overflowClip_1">
-                                            <strong>信通期刊</strong>
-                                        </div>
-                                        <p class="overflowClip_1 m-0 text-muted text-xs">学术期刊</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="http://www.infocomm-journal.com/qkq/CN/jcim/home.shtml"
-                           class="togo text-center text-muted is-views" data-id="6" data-toggle="tooltip"
-                           data-placement="right" title="直达" rel="nofollow"><i class="iconfont icon-goto"></i></a>
-                    </div>
-                </div>
-                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
-
-                    <div class="url-body default">
                         <a href="https://www.wanfangdata.com.cn/index.html" target="_blank" data-id="6"
                            data-url="https://www.wanfangdata.com.cn/index.html" class="card no-c  mb-4 site-689" data-toggle="tooltip"
                            data-placement="bottom" title="中外学术论文、中外标准、中外专利、科技成果、政策法规等科技文献的在线服务平台">
@@ -1240,7 +1212,7 @@
                                     </div>
                                     <div class="url-info flex-fill">
                                         <div class="text-sm overflowClip_1">
-                                            <strong>SCI</strong>
+                                            <strong>WOS</strong>
                                         </div>
                                         <p class="overflowClip_1 m-0 text-muted text-xs">《科学引文索引》外文文献搜索引擎</p>
                                     </div>
@@ -1254,33 +1226,6 @@
                 </div>
 
 
-                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
-
-                    <div class="url-body default">
-                        <a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank" data-id="6" data-url="https://ieeexplore.ieee.org/Xplore/home.jsp"
-                           class="card no-c  mb-4 site-689" data-toggle="tooltip" data-placement="bottom"
-                           title="世界上最大的专业技术组织，致力于推动科技进步，造福人类。">
-                            <div class="card-body">
-                                <div class="url-content d-flex align-items-center">
-                                    <div
-                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
-                                        <img class="lazy" src="ico/ieee.jpg" data-src="ico/ieee.jpg"
-                                             onerror="javascript:this.src='ico/ieee.jpg'" alt="IEEE">
-                                    </div>
-                                    <div class="url-info flex-fill">
-                                        <div class="text-sm overflowClip_1">
-                                            <strong>IEEE</strong>
-                                        </div>
-                                        <p class="overflowClip_1 m-0 text-muted text-xs">世界上最大的专业技术组织，致力于推动科技进步，造福人类。</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="https://ieeexplore.ieee.org/Xplore/home.jsp" class="togo text-center text-muted is-views" data-id="6"
-                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
-                                class="iconfont icon-goto"></i></a>
-                    </div>
-                </div>
                 <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
 
                     <div class="url-body default">
@@ -1896,6 +1841,49 @@
                 </div>
 
             </div>
+
+
+            <div class="d-flex flex-fill ">
+                <h4 class="text-gray text-lg mb-4">
+                    <i class="site-tag iconfont icon-tag icon-lg mr-1" id="term-17"></i>
+                    腾讯巢小兔<span style="color:#f1404b"> · </span><i class="subtitle">交流社区</i>
+                </h4>
+                <div class="flex-fill"></div>
+            </div>
+
+
+            <div class="row">
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <div class="url-body default">
+                        <a href="https://support.qq.com/product/424676" target="_blank" data-id="6"
+                           data-url="https://support.qq.com/product/424676" class="card no-c  mb-4 site-689" data-toggle="tooltip"
+                           data-placement="bottom" title="建议反馈，互动交流">
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                        <img class="lazy" src="ico/" data-src="ico/"
+                                             onerror="javascript:this.src='ico/'" alt="腾讯巢小兔">
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>腾讯巢小兔</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">建议反馈，互动交流</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://support.qq.com/product/424676" class="togo text-center text-muted is-views" data-id="6"
+                           data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                class="iconfont icon-goto"></i></a>
+                    </div>               
+                </div>
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+                    <p style="color:red;">待添加，敬请期待！</p>
+                </div>
+            </div>
+
 
 
         <div>
